<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ContactUsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Contact Us" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactUs_have_questions"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_email"
            android:contentDescription="@string/ContactUs_email_cd"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ContactUs_email_us"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ContactUs_support_email"
            android:autoLink="email"
            android:textColorLink="?attr/colorPrimary"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/ContactUs_call_us_cd"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ContactUs_call_us"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ContactUs_call_us_60_82_123_456"
            android:autoLink="phone"
            android:textColorLink="?attr/colorPrimary"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/ContactUs_available"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ContactUs_available_mon_fri_n8_00_am_5_00_pm"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
